--- a/graph_R.ipynb
+++ b/graph_R.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**IMPORTING LIBRARY AND FILE**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -853,6 +860,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TEST GRAPH"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -890,6 +904,15 @@
     "    geom_text(aes(label = sprintf(\"%.2f%%\", pct)), hjust = 0.5,\n",
     "            vjust = -0.5, size =5)+ theme1+  xlab(\"\") + ylab(\"Percent\")+\n",
     "              ggtitle(\"Respondents Gender\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Bahasa pemrograman yang digunakan dalam data science dan machine learning**\n",
+    "\n",
+    "Disini kita dapat melihat bahwa Python dan SQL adalah bahasa pemrograman yang paling banyak digunakan oleh data scientist."
    ]
   },
   {
